--- a/demo.hbs
+++ b/demo.hbs
@@ -1,3 +1,4 @@
+// handlebars style forEach over each object in dataObjects
 {{#each products}}
     <article class="col-4">
         <div class="product-image">
@@ -5,7 +6,7 @@
         </div>
         <div class="product-description">
             <p class="product-text-bold">{{this.desc}}</p>
-            <p class="product-cost">From<span class="current-price">{{this.originalPrice}}</span><span class="old-price">{{this.originalPrice}}</span></p>
+            <p class="product-cost">From<span class="current-price">{{this.originalPrice}}</span><span class="old-price">{{this.discount}}</span></p>
         </div>
     </article>
 {{/each}}
